# team-balancer

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
app/: auth.py  constants.py  logging_config.py  main.py
app/graph/: builder.py  state.py
app/graph/nodes/: evaluator_node.py  formatter_node.py  human_approval_node.py  input_node.py  score_fetch_node.py  team_generator_node.py
app/llm/: model.py
app/pages/: 2_점수_관리.py
app/schemas/: evaluation_schema.py  team_schema.py
app/utils/: build_balanced_teams.py  build_base_prompt_section.py  build_evaluator_prompt.py  build_feedback_section.py  build_team_generator_base_prompt_section.py  compute_score_delta.py  compute_team_score_sum.py  format_groups.py  format_score_groups.py  format_team.py  group_members_by_score.py  load_scores.py  parse_pairs_input.py  parse_team_request.py  validate_team_result.py
data/: scores.json
docs/superpowers/plans/: 2026-06-28-team-balancer-fixes.md  2026-06-29-run-logging-and-evaluator-score-fix.md  2026-07-12-scores-github-api.md  2026-07-16-gemini-quota-gpt-switch-button.md  2026-07-16-scores-inline-editing.md  (+1 more)
tests/: conftest.py  test_build_balanced_teams.py  test_compute_score_delta.py  test_compute_team_score_sum.py  test_graph_builder.py  test_input_node.py  test_logging_config.py  test_main_app.py  test_model.py  test_node_logging.py  test_parse_team_request.py  test_save_scores.py  test_score_page.py  test_scores_github.py  test_settings.py  test_streamlit_cloud_imports.py  test_team_generator_node.py  test_team_generator_prompt.py  test_validate_team_result.py
(+7 files in other folders)
