[project]
name = "team-balancer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.3.11",
    "langchain-google-genai>=4.2.2",
    "langchain-openai>=1.2.1",
    "langgraph>=1.2.6",
    "python-dotenv>=1.2.2",
    "streamlit>=1.57.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
